--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,4 +28,4 @@ jobs:
 
     - name: Run tests
       run: |
-        python -m unittest discover app/tests
+        python -m unittest discover tests
